--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -20,7 +20,7 @@
                                             <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
                                                 <div class="flex items-center w-full sm:w-auto">
                                                     <label for="q" class="sr-only">Search</label>
-                                                    <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search Drugs or Class..."
+                                                    <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search Drugs, Class, Dosage Form..."
                                                         class="focus:ring-amber-500 focus:border-amber-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-60">
                                                 </div>
                                                 <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
@@ -57,11 +57,13 @@
                         <tr class="text-xs text-left text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date restocked</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Dosage form</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Category</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Strength</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Trade Drug</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Strength</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Balance QTY</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Cost Price</th>
+                            <!-- <th scope="col" class="px-4 py-2 font-medium tracking-wider">Cost Price</th> -->
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Selling Price</th>
                         </tr>
                     </thead>
@@ -70,11 +72,13 @@
                         <tr class="{% cycle 'bg-white' 'bg-fuchsia-50' %} text-xs text-left">
                             <td class="px-4 py-2 text-gray-700">{{ forloop.counter }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ r.updated|default_if_none:"N/A" }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.dosage_form|default_if_none:'N/A'|upper }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.category|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
-                            <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.strength|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.trade_name|default_if_none:'N/A'|upper }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.strength|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.quantity|default_if_none:''|upper }}</td>
-                            <td class="px-4 py-2 font-medium text-gray-800">&#x20A6;{{ r.drug.piece_unit_cost_price|default_if_none:'N/A'|upper }}</td>
+                            <!-- <td class="px-4 py-2 font-medium text-gray-800">&#x20A6;{{ r.drug.piece_unit_cost_price|default_if_none:'N/A'|upper }}</td> -->
                             <td class="px-4 py-2 font-medium text-gray-800">&#x20A6;{{ r.drug.piece_unit_selling_price|default_if_none:'N/A'|upper }}</td>
                         </tr>
                         {% endfor %}
