--- a/store/templates/store/dispensed_list.html
+++ b/store/templates/store/dispensed_list.html
@@ -17,7 +17,7 @@
     </div>
     <div class="flex justify-end items-center m-1 space-x-1">
         {% if request.GET.urlencode %}
-            <a href="{% url 'dispense_pdf' %}?{{request.GET.urlencode}}" 
+            <a href="{% url 'dispense_pdf' dispensary_locker.unit.id %}?{{ request.GET.urlencode }}" 
                class="inline-flex items-center p-2 border border-transparent text-xs font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-1 focus:ring-offset-1 focus:ring-rose-500">
                 <i class="fa-solid fa-file-pdf"></i>
             </a>
