--- a/store/templates/store/main_store_dashboard.html
+++ b/store/templates/store/main_store_dashboard.html
@@ -14,6 +14,12 @@
                             <span>Store Inventory</span>
                         </div>
                     </a>
+                    <a href="{% url 'request_list' %}" class="w-full md:w-auto">
+                        <div class="bg-sky-600 hover:bg-white hover:text-sky-700 hover:border hover:border-sky-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+                            <i class="fa fa-solid fa-envelope fa-2x mr-2"></i>
+                            <span>Incoming Request</span>
+                        </div>
+                    </a>
                     <a href="{% url 'record' %}" class="w-full md:w-auto">
                         <div class="bg-amber-600 hover:bg-white hover:text-amber-700 hover:border hover:border-amber-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-clipboard-list fa-2x mr-2"></i>
