--- a/store/templates/store/main_store_dashboard.html
+++ b/store/templates/store/main_store_dashboard.html
@@ -7,20 +7,25 @@
     <div class="bg-gradient-to-r from-cyan-600 to-emerald-600 p-4 text-center mb-2">
         <span class="text-lg font-bold text-white uppercase tracking-wider">MAIN STORE MANAGEMENT</span>
     </div>
-                <div class="grid md:grid-cols-5 grid-cols-1 gap-4 text-xs uppercase p-10">
+                <div class="grid md:grid-cols-3 grid-cols-2 gap-4 text-xs uppercase p-10">
                     <a href="{% url 'list' %}" class="w-full md:w-auto">
                         <div class="bg-cyan-600 hover:bg-white hover:text-cyan-700 hover:border hover:border-cyan-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-pills fa-2x mr-2"></i>
                             <span>Store Inventory</span>
                         </div>
                     </a>
-                    <a href="{% url 'request_list' %}" class="w-full md:w-auto">
-                        <div class="bg-sky-600 hover:bg-white hover:text-sky-700 hover:border hover:border-sky-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+                    <a href="{% url 'request_list' %}" class="w-full md:w-auto relative">
+                        <div class="bg-slate-600 hover:bg-white hover:text-slate-700 hover:border hover:border-slate-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-envelope fa-2x mr-2"></i>
                             <span>Incoming Request</span>
+                            {% if recent_drug_request_count > 0 %}
+                            <span class="absolute -top-2 -right-2 bg-sky-600 text-white hover:bg-white hover:border border-sky-700 hover:text-sky-700 text-sm font-bold rounded-full h-10 w-10 flex items-center justify-center">
+                                {{ recent_drug_request_count }}
+                            </span>
+                            {% endif %}
                         </div>
                     </a>
-                    <a href="{% url 'record' %}" class="w-full md:w-auto">
+                                        <a href="{% url 'record' %}" class="w-full md:w-auto">
                         <div class="bg-amber-600 hover:bg-white hover:text-amber-700 hover:border hover:border-amber-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-clipboard-list fa-2x mr-2"></i>
                             <span>Store Record</span>
