--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -42,12 +42,16 @@
             <i class="fas fa-prescription-bottle-medical mr-2 lg:fa-2xl"></i> Send to Dispensary
             </a>&nbsp;
             <a href="{% url 'unitissue_report' store.id %}"
-            class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+            class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
             <i class="fas fa-file-pdf mr-2 lg:fa-2xl"></i> Bulk Locker Report
             </a>
-            <a href="{% url 'create_request' store.id %}"
-            class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-sky-600 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+            <a href="{% url 'drug_request' store.id %}"
+            class="ml-1 inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-sky-600 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
             <i class="fas fa-plus-circle mr-2 lg:fa-2xl"></i> Request Drugs
+            </a>
+            <a href="{{ drug_requests_url }}"
+            class="ml-1 inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-slate-600 hover:bg-slate-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+            <i class="fas fa-list-alt mr-2 lg:fa-2xl"></i> Request List 
             </a>
             </div>
 
