--- a/store/templates/store/unit_box.html
+++ b/store/templates/store/unit_box.html
@@ -21,7 +21,7 @@
                                                 <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
                                                     <div class="flex items-center w-full sm:w-auto">
                                                         <label for="q" class="sr-only">Search</label>
-                                                        <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search Drugs, Class or Dosage Form..."
+                                                        <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search..."
                                                             class="focus:ring-amber-500 focus:border-amber-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-60">
                                                     </div>
                                                     <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
@@ -40,6 +40,26 @@
                                                 </form>
             </div>
         <!-- Unit Issue Records Table -->
+        {% if request.GET.urlencode %}
+        <p class="p-2 whitespace-nowrap text-sm text-center">
+            <span class="text-green-700 font-semibold">
+                Moved: 
+                {% if total_appearance == 1 %}
+                    once
+                {% else %}
+                    {{ total_appearance }} times
+                {% endif %}
+            </span>
+            <span class="mx-2 text-gray-400">|</span>
+            <span class="text-blue-700 font-semibold">
+                Quantity: {{ total_quantity }}
+            </span>
+            <span class="mx-2 text-gray-400">|</span>
+            <span class="text-purple-700 font-semibold">
+                Value: &#x20A6;{{ total_price|floatformat:2 }}
+            </span>
+        </p>
+        {% endif %}
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="overflow-x-auto max-h-[65vh]">
                 <table class="min-w-full divide-y divide-gray-300">
@@ -50,7 +70,7 @@
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Strength</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Trade Drug</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Quantity</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Move To</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Status</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Issued</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Update</th>
                         </tr>
